Fix Content Jumping on scrolling
nav-wrapper with fixed height added

--- a/css/biginstitute.css
+++ b/css/biginstitute.css
@@ -10,6 +10,7 @@
     font-style: normal;
 }
 
+
 body:before {
 	content: url(../img/background.jpg);
 	display: none;
@@ -74,7 +75,6 @@ button, input, select, textarea {
 .jumboFrontPage {
 	padding-bottom: 0px;
 	margin-bottom: 0px;
-	min-height: 414px;
 }
 
 img.foreground_image {
@@ -134,6 +134,7 @@ img.foreground_image {
 }
 
 .affix {
+	background-color: #333333;
 	position: top;
 	top: 0;
 	width: 100%;
